{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerMap",
            "id": "3f61dfd4-51d2-4fb5-b43d-836138c462c6",
            "actions": [
                {
                    "name": "MoveStick",
                    "type": "Value",
                    "id": "5cc41e3b-3dd3-4fcf-a9b1-c48d32d969a1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0ff5404b-e036-4a26-8634-57282720f200",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}